--- a/src/app/simulation/simulation.component.html
+++ b/src/app/simulation/simulation.component.html
@@ -14,15 +14,7 @@
     </label>
     <label>
       Speed:
-      <input
-        type="range"
-        class="speed-slider"
-        [(ngModel)]="velocityMultiplier"
-        min="1"
-        max="10"
-        value="3"
-        step="1"
-      />
+      <input type="range" class="speed-slider" [(ngModel)]="velocityMultiplier" min="1" max="10" value="3" step="1" />
       <span>{{ velocityMultiplier }}</span>
     </label>
     <button (click)="startSimulation()">Start</button>
@@ -31,8 +23,19 @@
   <div *ngIf="!isRunning && winner != null" class="winner-display">
     <h1>Winner: {{ winner }}</h1>
   </div>
-
-  <div class="entity-container">
-    <app-entity *ngFor="let entity of entities" [entity]="entity"> </app-entity>
+  <div class="data-container">
+    <div class="entity-container">
+      <app-entity *ngFor="let entity of entities" [entity]="entity"> </app-entity>
+    </div>
+    <div>
+      <ngx-charts-bar-vertical
+      [view]="[700, 400]"
+      [results]="chartData"
+      [showDataLabel]="true"
+      [legend]="true"
+      [animations]="false"
+    />
+    </div>
   </div>
+
 </div>
